--- a/Pages/EditSupplier.cshtml
+++ b/Pages/EditSupplier.cshtml
@@ -125,7 +125,7 @@
                                     <a href="ManageSupplier"
                                         class="btn btn-outline-gray-600  align-items-center w-100">@Model.lblCancel</a>
 
-                                    <input type="submit" value="Update"
+                                    <input type="submit" value="@Model.lblUpdate"
                                         class="btn btn-sm btn-gray-800 align-items-center w-100"
                                         style="text-align:center;" />
 
