--- a/Pages/ManageDamaged.cshtml
+++ b/Pages/ManageDamaged.cshtml
@@ -342,7 +342,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
     <div class="d-flex align-items-center justify-content-between">
         <div></div>
-        <div>
+        <div style="direction: ltr;">
             @if (Model.TotalPages > 1)
             {
                 <nav aria-label="Page navigation">
@@ -511,7 +511,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 @if (Model.TotalPages > 1)
 {
-    <nav aria-label="Page navigation">
+    <nav aria-label="Page navigation" style="direction: ltr;">
         <ul class="pagination">
 
             @* Previous button *@
