--- a/Pages/ManageStorage.cshtml
+++ b/Pages/ManageStorage.cshtml
@@ -162,7 +162,7 @@
         <div  class="mb-3">@Model.lblTotalItem : @Model.TotalItems</div>
         <div> @if (Model.TotalPages > 1)
             {
-                <nav aria-label="Page navigation">
+                <nav aria-label="Page navigation" style="direction: ltr;">
                     <ul class="pagination">
 
                         @* Previous button *@
@@ -315,7 +315,7 @@
 
     @if (Model.TotalPages > 1)
     {
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" style="direction: ltr;">
             <ul class="pagination">
 
                 @* Previous button *@
