--- a/Pages/ManageStore.cshtml
+++ b/Pages/ManageStore.cshtml
@@ -273,7 +273,7 @@
 
             @if (Model.TotalPages > 1)
             {
-                <nav aria-label="Page navigation">
+                <nav aria-label="Page navigation" style="direction: ltr;">
                     <ul class="pagination">
 
                         @* Previous button *@
@@ -612,7 +612,7 @@
 
      @if (Model.TotalPages > 1)
     {
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" style="direction: ltr;">
             <ul class="pagination">
 
                 @* Previous button *@
