--- a/Pages/ManageUnits.cshtml
+++ b/Pages/ManageUnits.cshtml
@@ -135,7 +135,7 @@
     </div>
      @if (Model.TotalPages > 1)
     {
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" style="direction: ltr;">
             <ul class="pagination">
 
                 @* Previous button *@
@@ -256,7 +256,7 @@
     </div>
     @if (Model.TotalPages > 1)
     {
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" style="direction: ltr;">
             <ul class="pagination">
 
                 @* Previous button *@
