--- a/Pages/ManageUsers.cshtml
+++ b/Pages/ManageUsers.cshtml
@@ -263,7 +263,7 @@
     </div>
     @if (Model.TotalPages > 1)
     {
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" style="direction: ltr;">
             <ul class="pagination">
 
                 @* Previous button *@
@@ -473,7 +473,7 @@
     @* <div style="text-align:center; color:maroon">@Model.Message</div> *@
     @if (Model.TotalPages > 1)
     {
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" style="direction: ltr;">
             <ul class="pagination">
 
                 @* Previous button *@
