--- a/Pages/Rep_Distribution.cshtml
+++ b/Pages/Rep_Distribution.cshtml
@@ -208,7 +208,7 @@
     <div>@Model.lblTotalItem : @Model.TotalItems</div>
     @if (Model.TotalPages > 1)
     {
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" style="direction: ltr;">
             <ul class="pagination">
 
                 @* Previous button *@
@@ -354,7 +354,7 @@
     </div>
     @if (Model.TotalPages > 1)
     {
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" style="direction: ltr;">
             <ul class="pagination">
 
                 @* Previous button *@
