--- a/Pages/Rep_HazardMaterial.cshtml
+++ b/Pages/Rep_HazardMaterial.cshtml
@@ -205,7 +205,7 @@
     <div>@Model.lblTotalItem : @Model.TotalItems</div>
     @if (Model.TotalPages > 1)
     {
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" style="direction: ltr;">
             <ul class="pagination">
 
                 @* Previous button *@
@@ -367,7 +367,7 @@
 
    @if (Model.TotalPages > 1)
     {
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" style="direction: ltr;">
             <ul class="pagination">
 
                 @* Previous button *@
