--- a/Pages/Rep_Inventory.cshtml
+++ b/Pages/Rep_Inventory.cshtml
@@ -241,7 +241,7 @@
         <div>
             @if (Model.TotalPages > 1)
             {
-                <nav aria-label="Page navigation">
+                <nav aria-label="Page navigation" style="direction: ltr;">
                     <ul class="pagination">
 
                         @* Previous button *@
@@ -388,7 +388,7 @@
     </div>
     @if (Model.TotalPages > 1)
     {
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" style="direction: ltr;">
             <ul class="pagination">
 
                 @* Previous button *@
