--- a/Pages/Rep_ItemCards.cshtml
+++ b/Pages/Rep_ItemCards.cshtml
@@ -225,7 +225,7 @@
         <div>
              @if (Model.TotalPages > 1)
     {
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" style="direction: ltr;">
             <ul class="pagination">
 
                 @* Previous button *@
@@ -435,7 +435,7 @@
         <div>
             @if (Model.TotalPages > 1)
             {
-            <nav aria-label="Page navigation">
+            <nav aria-label="Page navigation" style="direction: ltr;">
                 <ul class="pagination">
 
                     @* Previous button *@
