--- a/Pages/Rep_UserReport.cshtml
+++ b/Pages/Rep_UserReport.cshtml
@@ -212,7 +212,7 @@
 
     <div class="d-flex align-items-center justify-content-between">
         <div>@Model.lblTotalUsers : @Model.TotalUsers</div>
-        <div>
+        <div style="direction: ltr;">
             @if (Model.TotalPages > 1)
             {
                 <nav aria-label="Page navigation">
@@ -387,7 +387,7 @@
 
     @if (Model.TotalPages > 1)
     {
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" style="direction: ltr;">
             <ul class="pagination">
 
                 @* Previous button *@
