--- a/Pages/ViewReturnRequests.cshtml
+++ b/Pages/ViewReturnRequests.cshtml
@@ -151,7 +151,7 @@
 </div>
 @if (Model.TotalPages > 1)
 {
-    <nav aria-label="Page navigation">
+    <nav aria-label="Page navigation" style="direction: ltr;">
         <ul class="pagination">
 
             @* Previous button *@
@@ -299,7 +299,7 @@
     </div>
 @if (Model.TotalPages > 1)
 {
-    <nav aria-label="Page navigation">
+    <nav aria-label="Page navigation" style="direction: ltr;">
         <ul class="pagination">
 
             @* Previous button *@
