--- a/Pages/Disbursements.cshtml
+++ b/Pages/Disbursements.cshtml
@@ -409,7 +409,7 @@ document.addEventListener("DOMContentLoaded", function () {
     </div>
     <div class="d-flex justify-content-between align-items-center">
         <div class="">@Model.lblTotalItem : @Model.TotalItems</div>
-        <div>
+        <div style="direction: ltr;">
 
             @if (Model.TotalPages > 1)
             {
@@ -627,7 +627,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
     @if (Model.TotalPages > 1)
     {
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" style="direction: ltr;">
             <ul class="pagination">
 
                 @* Previous button *@
