--- a/Pages/ManageUserGroups.cshtml
+++ b/Pages/ManageUserGroups.cshtml
@@ -179,7 +179,7 @@
 
      @if (Model.TotalPages > 1)
     {
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" style="direction: ltr;">
             <ul class="pagination">
 
                 @* Previous button *@
