--- a/Pages/Rep_DamagedItems.cshtml
+++ b/Pages/Rep_DamagedItems.cshtml
@@ -199,7 +199,7 @@
     <div>@Model.lblTotalDamagedItem : @Model.TotalItems</div>
     @if (Model.TotalPages > 1)
     {
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" style="direction: ltr;">
             <ul class="pagination">
 
                 @* Previous button *@
@@ -336,7 +336,7 @@
     </div>
     @if (Model.TotalPages > 1)
     {
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" style="direction: ltr;">
             <ul class="pagination">
 
                 @* Previous button *@
