--- a/Pages/ManageItemGroups.cshtml
+++ b/Pages/ManageItemGroups.cshtml
@@ -130,7 +130,7 @@
                 </div>
             </div>
             <div class="col-4 col-md-2 col-xl-1 ps-md-0 text-end">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">@Model.lblSubmit</button>
             </div>
         </form>
     </div>
