--- a/Pages/ManageUsers.cshtml
+++ b/Pages/ManageUsers.cshtml
@@ -117,14 +117,14 @@
         <div class="btn-group d-flex mx-1 ms-lg-1">
             <a href="ViewStoreTypes" class="btn btn-primary d-inline-flex align-items-center justify-content-center">
                 <img b-ie9pk9zf1q="" class="icon icon-xs me-2 text-white" src="images/manage-b.png">
-                Warehouse Type
+               @Model.lblWarehouseType
             </a>
         </div>
 
         <div class="btn-group d-flex mx-1 ms-lg-1">
             <a href="ViewDoctypes" class="btn btn-primary d-inline-flex align-items-center justify-content-center">
                 <img b-ie9pk9zf1q="" class="icon icon-xs me-2 text-white" src="images/manage-b.png">
-               Manage Document Type
+              @Model.lblManageDocumentType
             </a>
         </div>
 
@@ -138,7 +138,7 @@
         <div class="btn-group d-flex mx-1 ms-lg-1">
             <a href="HazardTypes/Index" class="btn btn-primary d-inline-flex align-items-center justify-content-center">
                 <img b-ie9pk9zf1q="" class="icon icon-xs me-2  text-white"  src="images/manage-b.png">
-                Manage Hazard Types
+                @Model.lblManageHazardTypes
             </a>
         </div>
         <div class="btn-group d-flex mx-1 ms-lg-1">
