--- a/Pages/ViewStoretypes.cshtml
+++ b/Pages/ViewStoretypes.cshtml
@@ -23,7 +23,7 @@
                 </li>
             </ol>
         </nav>
-        <h2 class="h4">Warehouse Type</h2>
+        <h2 class="h4"> @Model.lblWarehouseType</h2>
         <!-- <p class="mb-0">Your web analytics dashboard template.</p> -->
     </div>
     <div class="btn-toolbar mb-2 mb-md-0 d-flex flex-wrap">
@@ -50,8 +50,8 @@
                     <thead class="thead-light">
                         <tr>
                             <th>ID</th>
-                            <th>Store Type</th>
-                            <th class="text-center">Actions</th>
+                            <th> @Model.lblWarehouseType</th>
+                            <th class="text-center">@Model.lblAction</th>
                         </tr>
                     </thead>
                     <tbody>
