--- a/Pages/ManageStore.cshtml
+++ b/Pages/ManageStore.cshtml
@@ -469,8 +469,10 @@
                                                 <input type="hidden" value="@Model.StoreName" name="StoreName" />
                                                 <input type="submit" value="@Model.lblEdit" class="btn btn-secondary"
                                                        asp-page-handler="Edit" />
-                                                <input type="submit" value="@Model.lblDelete" class="btn btn-danger"
-                                                       asp-page-handler="Delete" />
+                                                @if (Model.CanAddStore){
+                                                    <input type="submit" value="@Model.lblDelete" class="btn btn-danger"
+                                                        asp-page-handler="Delete" />
+                                                }
                                             </form>
                                         </td>
                                     </tr>
