--- a/Pages/Rep_ItemCards.cshtml
+++ b/Pages/Rep_ItemCards.cshtml
@@ -430,9 +430,8 @@
         </div>
     </div>
 
-    <div class="d-flex align-items-center justify-content-between">
-        @* <div>@Model.lblTotalItem : @Model.TotalItems</div> *@
-        <div>
+    @* <div class="d-flex align-items-center justify-content-between">
+        <div> *@
             @if (Model.TotalPages > 1)
             {
             <nav aria-label="Page navigation" style="direction: ltr;">
@@ -511,8 +510,8 @@
                 </ul>
             </nav>
             }
-        </div>
-    </div>
+        @* </div>
+    </div> *@
 
 
 
