--- a/Pages/ManageUsers.cshtml
+++ b/Pages/ManageUsers.cshtml
@@ -128,12 +128,12 @@
             </a>
         </div>
 
-        <div class="btn-group d-flex mx-1 ms-lg-1">
+        @* <div class="btn-group d-flex mx-1 ms-lg-1">
             <a href="ViewPrivileges" class="btn btn-primary d-inline-flex align-items-center justify-content-center">
                 <img b-ie9pk9zf1q="" class="icon icon-xs me-2  text-white"  src="images/manage-b.png">
                 Manage Privilege
             </a>
-        </div>
+        </div> *@
 
         <div class="btn-group d-flex mx-1 ms-lg-1">
             <a href="HazardTypes/Index" class="btn btn-primary d-inline-flex align-items-center justify-content-center">
