--- a/Pages/Alerts/Index.cshtml
+++ b/Pages/Alerts/Index.cshtml
@@ -127,7 +127,7 @@
                                 </td>
                             
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Store.StoreId)
+                                    @Html.DisplayFor(modelItem => item.Store.StoreName)
                                 </td>
                                 <td>
                                     @* <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> | *@
@@ -214,7 +214,7 @@
                                 </td>
 
                                 <td>
-                                        @Html.DisplayFor(modelItem => item.Store.StoreId)
+                                        @Html.DisplayFor(modelItem => item.Store.StoreName)
                                 </td>
                                 <td>
                                     @* <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> | *@
@@ -304,7 +304,7 @@
                                 </td>
 
                                 <td>
-                                        @Html.DisplayFor(modelItem => item.Store.StoreId)
+                                        @Html.DisplayFor(modelItem => item.Store.StoreName)
                                 </td>
                                 <td>
                                     @* <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> | *@
@@ -394,7 +394,7 @@
                                 </td>
 
                                 <td>
-                                        @Html.DisplayFor(modelItem => item.ItemCard.Store.StoreId)
+                                        @Html.DisplayFor(modelItem => item.ItemCard.Store.StoreName)
                                 </td>
                                 <td>
                                     @* <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> | *@
