--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -256,7 +256,7 @@
                 else
                 {
                     <li class="nav-item @("active")">
-                        <a href="./Home?lang=en" class="nav-link">
+                        <a href="/Home?lang=en" class="nav-link">
                             <span class="sidebar-icon">
                                 <svg class="icon icon-xxs me-2" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0_343_214)">
