--- a/Pages/Rep_Item.cshtml
+++ b/Pages/Rep_Item.cshtml
@@ -150,7 +150,7 @@
                 </div>
                 
                 <div class="col-4 col-md-2 ps-md-0 mx-3">
-                    <button type="submit" name="action" value="search"class="btn btn-primary">@Model.lblSubmit</button>
+                    <button type="submit" name="action" value="search"class="btn btn-primary">@Model.lblSearch</button>
                 </div>
 
                 <div class="col d-flex justify-content-end gap-2">
