--- a/Pages/Rep_ItemCards.cshtml
+++ b/Pages/Rep_ItemCards.cshtml
@@ -146,7 +146,7 @@
                 </div>
             </div>
             <div class="col-4 col-md-2  col-xl-1 ps-md-0 text-end">
-                <button type="submit" name="action" value="search" class="btn btn-primary">@Model.lblSubmit</button>
+                <button type="submit" name="action" value="search" class="btn btn-primary">@Model.lblSearch</button>
             </div>
 
 
