--- a/Pages/Alerts/Index.cshtml
+++ b/Pages/Alerts/Index.cshtml
@@ -18,33 +18,33 @@
                     </li>
                     <li class="breadcrumb-item d-flex align-items-center">
                         <img src="~/images/management.png" alt="Home" width="16" height="16" class="me-2" />
-                        Alerts
+                        @Model.lblAlerts
                     </li>
                 </ol>
             </nav>
-            <h2 class="h4">Alerts</h2>
+            <h2 class="h4"> @Model.lblAlerts</h2>
             <!-- <p class="mb-0">Your web analytics dashboard template.</p>-->
         </div>
         <div class="btn-toolbar mb-2 mb-md-0" id="sectionn-buttons">
             <div class="btn-group ms-2 ms-lg-3">
                 <button id="btn-minimum"
                     class="btn justify-content-center top-big-btn btn-gray-600 d-inline-flex align-items-center"
-                    onclick="setActiveButton('minimum')">Minimum</button>
+                    onclick="setActiveButton('minimum')"> @Model.lblMinimum</button>
             </div>
             <div class="btn-group ms-2 ms-lg-3">
                 <button id="btn-maximum"
                     class="btn justify-content-center top-big-btn btn-outline-gray-600 d-inline-flex align-items-center"
-                    onclick="setActiveButton('maximum')">Maximum</button>
+                    onclick="setActiveButton('maximum')"> @Model.lblMaximum</button>
             </div>
             <div class="btn-group ms-2 ms-lg-3">
                 <button id="btn-reorder"
                     class="btn justify-content-center top-big-btn btn-outline-gray-600 d-inline-flex align-items-center"
-                    onclick="setActiveButton('reorder')">Re-order</button>
+                    onclick="setActiveButton('reorder')"> @Model.lblReorder</button>
             </div>
             <div class="btn-group ms-2 ms-lg-3">
                 <button id="btn-notmoved"
                     class="btn justify-content-center top-big-btn btn-outline-gray-600 d-inline-flex align-items-center"
-                    onclick="setActiveButton('notmoved')">Not Moved</button>
+                    onclick="setActiveButton('notmoved')"> @Model.lblNotmoved</button>
             </div>
         </div>
     </div>
