--- a/Pages/Home.cshtml
+++ b/Pages/Home.cshtml
@@ -272,7 +272,7 @@
                         <div>
                             <div class="mb-2">
                                 <span><img src="images/alert.png" alt="alert" /> <b>@Model.lblAlert</b> @Model.ItemCardminimum.Count @Model.lblMinimumQuantity</span>
-                                <a class="btn btn-sm btn-primary ms-2" href="/Alerts/Index#sectionn-minimum">View</a>
+                                <a class="btn btn-sm btn-primary ms-2" href="/Alerts/Index#sectionn-minimum">@Model.lblView</a>
                             </div>
                         </div>
                     }
@@ -282,7 +282,7 @@
                         <div>
                             <div class="mb-2">
                                 <span><img src="images/alert.png" alt="alert" /> <b>@Model.lblAlert</b> @Model.ItemCardCeiling.Count @Model.lblMaximumQuantity</span>
-                                <a class="btn btn-sm btn-primary ms-2" href="/Alerts/Index#sectionn-maximum">View</a>
+                                <a class="btn btn-sm btn-primary ms-2" href="/Alerts/Index#sectionn-maximum">@Model.lblView</a>
                             </div>
                         </div>
                     }
@@ -293,7 +293,7 @@
                         <div>
                             <div class="mb-2">
                                 <span><img src="images/alert.png" alt="alert" /> <b>@Model.lblAlert</b> @Model.ItemCardReorder.Count @Model.lblReorderQuantity</span>
-                                <a class="btn btn-sm btn-primary ms-2" href="/Alerts/Index#sectionn-reorder">View</a>
+                                <a class="btn btn-sm btn-primary ms-2" href="/Alerts/Index#sectionn-reorder">@Model.lblView</a>
                             </div>
                         </div>
                     }
@@ -304,7 +304,7 @@
                         <div>
                             <div class="mb-0">
                                 <span><img src="images/alert.png" alt="alert" /> <b>@Model.lblAlert</b> @Model.ItemCardNotMoved.Count @Model.lblNotMoved3</span>
-                                <a class="btn btn-sm btn-primary ms-2" href="/Alerts/Index#sectionn-notmoved">View</a>
+                                <a class="btn btn-sm btn-primary ms-2" href="/Alerts/Index#sectionn-notmoved">@Model.lblView</a>
                             </div>
                         </div>
                     }
