--- a/Pages/ManageItems.cshtml
+++ b/Pages/ManageItems.cshtml
@@ -235,6 +235,10 @@ document.addEventListener("DOMContentLoaded", function () {
                         <a href="/Home" class="text-decoration-none">@Model.lblHome</a>
                     </li>
                     <li class="breadcrumb-item d-flex align-items-center">
+                        <img src="images/retailer.png" alt="Home" width="16" height="16" class="me-2" />
+                        <a href="/ManageStore" class="text-decoration-none">@Model.lblStores</a>
+                    </li>
+                    <li class="breadcrumb-item d-flex align-items-center">
                         <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
                         @Model.lblItems
                     </li>
